--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <style>
-  body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f4f7f9; color:#333; margin:0; }
-  .card { background:#fff; padding:18px; border-radius:15px; margin-bottom:15px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); border:1px solid #eaeaea; }
-  h2 { font-size:24px; color:#0a7cff; margin-bottom:15px; }
+  body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f4f7f6; color:#333; margin:0; }
+  .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); border:1px solid #eee; }
+  h2 { font-size:22px; color:#0a7cff; margin-bottom:12px; }
   #username { font-weight:bold; font-size:18px; }
-  #roleBadge { display:inline-block; padding:5px 14px; border-radius:20px; background:#dfe4ea; font-size:13px; margin-bottom:15px; font-weight:600; color:#2f3542; }
+  #roleBadge { display:inline-block; padding:4px 12px; border-radius:20px; background:#e2e8f0; font-size:13px; margin-bottom:15px; font-weight:600; }
   
-  button { width:100%; padding:15px; font-size:16px; border-radius:12px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; transition: 0.2s; }
+  button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; transition: 0.2s; }
   .primary { background:#0a7cff; color:#fff; }
-  .secondary { background:#f1f2f6; color:#2f3542; }
-  .danger { background:#fff5f5; color:#fa5252; border: 1px solid #ffc9c9; }
-  .success { background:#2ecc71; color:#fff; box-shadow: 0 4px 10px rgba(46, 204, 113, 0.3); }
+  .secondary { background:#f1f3f5; color:#495057; }
+  .danger { background:#fff5f5; color:#e03131; border:1px solid #ffa8a8; }
+  .success { background:#2f9e44; color:#fff; }
   
-  input, select { width:100%; padding:13px; box-sizing: border-box; font-size:16px; margin-bottom:12px; border-radius:10px; border:1px solid #ddd; background:#fff; }
+  input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px; margin-bottom:10px; border-radius:8px; border:1px solid #ddd; }
   #formBox, #historyBox { display:none; }
-  .label-text { font-size:11px; color:#a4b0be; text-transform:uppercase; margin-top:8px; font-weight:bold; letter-spacing: 0.5px; }
-  .val-text { font-size:15px; margin-bottom:8px; color: #2f3542; }
+  .label-text { font-size:11px; color:#868e96; margin-top:8px; font-weight:bold; }
+  .val-text { font-size:15px; margin-bottom:8px; }
 
-  /* Full Screen Loading */
-  #loading { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.9); z-index:10000; justify-content:center; align-items:center; flex-direction:column; }
-  .spinner { border: 5px solid #f3f3f3; border-top: 5px solid #0a7cff; border-radius: 50%; width: 50px; height: 50px; animation: spin 1s linear infinite; }
+  /* Loading Spinner */
+  #loading { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.85); z-index:9999; justify-content:center; align-items:center; flex-direction:column; }
+  .spinner { border: 4px solid #f3f3f3; border-top: 4px solid #0a7cff; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; }
   @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 </style>
 </head>
@@ -32,20 +32,20 @@
 
 <div id="loading">
   <div class="spinner"></div>
-  <p style="margin-top:15px; font-weight:bold; color:#0a7cff;">กำลังประมวลผล...</p>
+  <p style="margin-top:10px; font-weight:bold; color:#0a7cff;">กำลังโหลด...</p>
 </div>
 
 <div style="max-width: 500px; margin: auto;">
   <h2>ระบบจองรถ หก-มน.</h2>
   <div id="username">สวัสดีคุณ...</div>
-  <div id="roleBadge">กำลังตรวจสอบสิทธิ์...</div>
+  <div id="roleBadge">...</div>
 
   <button id="mainBtn" class="primary"></button>
   <button id="subBtn" class="secondary"></button>
   <div id="driverActionBox"></div>
 
   <div id="formBox" class="card">
-    <h3 style="margin-top:0;">จองการเดินทาง</h3>
+    <h3 style="margin-top:0;">ระบุข้อมูลการจอง</h3>
     <input type="date" id="booking_date">
     <input type="time" id="booking_time">
     <select id="vehicle_type">
@@ -55,10 +55,10 @@
       <option value="รถตู้">รถตู้</option>
     </select>
     <input type="number" id="passenger_count" placeholder="จำนวนผู้โดยสาร">
-    <input type="text" id="pickup_location" placeholder="จุดรับ (ต้นทาง)">
-    <input type="text" id="dropoff_location" placeholder="จุดส่ง (ปลายทาง)">
-    <input type="text" id="contact_mobile" placeholder="เบอร์โทรศัพท์ติดต่อ">
-    <button class="primary" onclick="submitBooking()">ยืนยันการจอง</button>
+    <input type="text" id="pickup_location" placeholder="จุดรับ">
+    <input type="text" id="dropoff_location" placeholder="จุดส่ง">
+    <input type="text" id="contact_mobile" placeholder="เบอร์โทรติดต่อ">
+    <button class="primary" onclick="submitBooking()">ยืนยัน</button>
     <button class="secondary" onclick="closeForm()">ยกเลิก</button>
   </div>
 
@@ -66,13 +66,13 @@
 </div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycby1A-JQ67hGr4Y-pNmV6Lu2qn2NVYFcwUqgMH372J6ovDRlJVxTfw7FmV_I9HSQ8x1rbQ/exec"; // *** เปลี่ยนเป็น URL ของคุณ ***
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbyFz0Pi5N37KqV1aFZJM0DABePVTAXZkQEY_fXeLew9NfrCjfbDtWgChnq0Fg2HKaJ64w/exec"; // *** เปลี่ยนเป็น URL ของคุณ ***
 let userId = "", role = "", mobile = "", displayName = "";
 
-function toggleLoading(s) { document.getElementById("loading").style.display = s ? "flex" : "none"; }
+function toggleLoad(s) { document.getElementById("loading").style.display = s ? "flex" : "none"; }
 
 async function init() {
-  toggleLoading(true);
+  toggleLoad(true);
   try {
     await liff.init({ liffId: "2008934745-qU0fPztf" });
     if (!liff.isLoggedIn()) liff.login();
@@ -87,40 +87,35 @@ async function init() {
 
     role = res.role; mobile = res.mobile || "";
     render();
-    if(role === "driver") { showHistory(); }
-  } catch (err) { alert("Initialization Error: " + err); }
-  toggleLoading(false);
+    if(role === "driver") showHistory(); // Driver เห็นงานทันที
+  } catch (err) { alert(err); }
+  toggleLoad(false);
 }
 
 function render() {
   const mainBtn = document.getElementById("mainBtn");
-  const subBtn = document.getElementById("subBtn");
   document.getElementById("roleBadge").innerText = (role === "driver") ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
-  
   const dBox = document.getElementById("driverActionBox");
   dBox.innerHTML = "";
 
   if (role === "driver") {
-    mainBtn.innerText = "ลงงานเอง (พนักงาน)";
-    dBox.innerHTML = `
-      <button class="secondary" onclick="editDriverMobile()">แก้ไขเบอร์โทร</button>
-      <button class="danger" onclick="cancelDriverRole()">ยกเลิกการเป็นคนขับ</button>
-    `;
+    mainBtn.innerText = "ลงงานเอง (งานด่วน)";
+    dBox.innerHTML = `<button class="secondary" onclick="editDriverMobile()">แก้ไขเบอร์โทร</button>
+                      <button class="danger" onclick="cancelDriverRole()">ยกเลิกบทบาทคนขับ</button>`;
   } else {
     mainBtn.innerText = "จองรถ";
-    dBox.innerHTML = `<button class="secondary" onclick="registerDriver()">ลงทะเบียนเป็นพนักงานขับรถ</button>`;
+    dBox.innerHTML = `<button class="secondary" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
   }
-  
   mainBtn.onclick = showForm;
-  subBtn.innerText = "ประวัติงานและงานว่าง";
-  subBtn.onclick = showHistory;
+  document.getElementById("subBtn").innerText = "ดูประวัติและงานที่ว่าง";
+  document.getElementById("subBtn").onclick = showHistory;
 }
 
 function formatD(d) { return (d && d.includes("T")) ? d.split("T")[0] : d; }
 function formatT(t) { return (t && t.includes("T")) ? t.split("T")[1].substring(0, 5) : t; }
 
 async function showHistory() {
-  toggleLoading(true);
+  toggleLoad(true);
   document.getElementById("formBox").style.display = "none";
   const hBox = document.getElementById("historyBox");
   hBox.style.display = "block";
@@ -131,7 +126,7 @@ async function showHistory() {
   }).then(r => r.json());
 
   let list = res.data || [];
-  // กรอง: แสดงงานตัวเอง + งาน Pending (สำหรับคนขับ)
+  // กรอง: แสดงงานของตัวเอง และ งานว่าง (ถ้าเป็น Driver)
   let filtered = list.filter(b => {
     const isMine = (b.booked_by === userId || b.driver_line_id === userId);
     const isPending = (b.status === "pending");
@@ -139,14 +134,12 @@ async function showHistory() {
   });
 
   if (filtered.length === 0) {
-    hBox.innerHTML = "<p style='text-align:center; color:#888;'>ไม่พบรายการงาน</p>";
+    hBox.innerHTML = "<p style='text-align:center;'>ไม่พบข้อมูล</p>";
   } else {
-    // เรียงงานล่าสุดขึ้นก่อน
     hBox.innerHTML = "<h3>รายการงาน</h3>" + filtered.reverse().map(b => {
-      // Logic แสดงปุ่มรับงาน: ต้องเป็น Driver + สถานะ Pending + ไม่ใช่งานที่ตัวเองจองเอง
-      const canAccept = (role === "driver" && b.status === "pending" && b.booked_by !== userId);
-      // Logic แสดงปุ่มยกเลิก: เป็นเจ้าของงาน หรือ เป็นคนขับที่รับงานแล้ว และงานยังไม่ถูกยกเลิก
-      const canCancel = ((b.booked_by === userId || b.driver_line_id === userId) && b.status !== 'cancelled');
+      // FIX logic: ถ้าเป็น driver และงานว่าง ให้โชว์ปุ่มรับงานเสมอ
+      const canAccept = (role === "driver" && b.status === "pending");
+      const isOwner = (b.booked_by === userId || b.driver_line_id === userId);
 
       return `
         <div class="card">
@@ -155,57 +148,57 @@ async function showHistory() {
           <div class="label-text">📍 เส้นทาง:</div>
           <div class="val-text">${b.pickup_location} → ${b.dropoff_location}</div>
           <div class="label-text">🚦 สถานะ:</div>
-          <div class="val-text" style="color:${b.status === 'pending' ? '#f39c12' : '#27ae60'}">
+          <div class="val-text" style="color:${b.status === 'pending' ? '#f39c12' : '#2f9e44'}">
             <b>${b.status.toUpperCase()}</b> ${b.driver_name ? '(คนขับ: '+b.driver_name+')' : ''}
           </div>
           
           ${canAccept ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
-          ${canCancel ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')">ยกเลิกงานนี้</button>` : ""}
+          ${(isOwner && b.status !== 'cancelled') ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')">ยกเลิก</button>` : ""}
         </div>
       `;
     }).join("") + `<button class="secondary" onclick="closeHistory()">ปิด</button>`;
   }
-  toggleLoading(false);
+  toggleLoad(false);
 }
 
 async function acceptJob(id) {
-  if (!confirm("คุณยืนยันที่จะรับงานนี้ใช่หรือไม่?")) return;
-  toggleLoading(true);
+  if (!confirm("ยืนยันรับงานนี้?")) return;
+  toggleLoad(true);
   const res = await fetch(ENDPOINT, {
     method: "POST",
     body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName })
   }).then(r => r.json());
-  toggleLoading(false);
   if (res.success) { alert("รับงานสำเร็จ!"); showHistory(); } else { alert(res.message); }
+  toggleLoad(false);
 }
 
 async function cancelDriverRole() {
-  if (!confirm("ยืนยันการยกเลิกบทบาทพนักงานขับรถ?")) return;
-  toggleLoading(true);
+  if (!confirm("ยืนยันยกเลิกคนขับ?")) return;
+  toggleLoad(true);
   const res = await fetch(ENDPOINT, {
     method: "POST",
     body: JSON.stringify({ action: "cancel_driver", line_user_id: userId })
   }).then(r => r.json());
-  if (res.success) { alert("ดำเนินการเรียบร้อย"); location.reload(); }
-  toggleLoading(false);
+  if (res.success) location.reload();
+  toggleLoad(false);
 }
 
 async function registerDriver() {
-  const phone = prompt("เบอร์โทรศัพท์สำหรับรับงาน:");
+  const phone = prompt("เบอร์ติดต่อ:");
   if(!phone) return;
-  toggleLoading(true);
+  toggleLoad(true);
   const res = await fetch(ENDPOINT, {
     method: "POST",
     body: JSON.stringify({ action: "register_driver", line_user_id: userId, mobile_phone: phone })
   }).then(r => r.json());
-  if (res.success) { alert("ลงทะเบียนสำเร็จ"); location.reload(); }
-  toggleLoading(false);
+  if (res.success) location.reload();
+  toggleLoad(false);
 }
 
 async function submitBooking() {
-  const fields = ["booking_date", "booking_time", "vehicle_type", "passenger_count", "pickup_location", "dropoff_location", "contact_mobile"];
-  for (let f of fields) { if (!document.getElementById(f).value) return alert("กรุณากรอกข้อมูลให้ครบถ้วน"); }
-  toggleLoading(true);
+  const f = ["booking_date", "booking_time", "vehicle_type", "passenger_count", "pickup_location", "dropoff_location", "contact_mobile"];
+  for (let id of f) { if (!document.getElementById(id).value) return alert("กรอกข้อมูลไม่ครบ"); }
+  toggleLoad(true);
   const res = await fetch(ENDPOINT, {
     method: "POST",
     body: JSON.stringify({
@@ -220,32 +213,15 @@ async function submitBooking() {
       contact_mobile: document.getElementById("contact_mobile").value
     })
   }).then(r => r.json());
-  toggleLoading(false);
-  if (res.success) { alert("จองรถสำเร็จ!"); closeForm(); showHistory(); }
+  if (res.success) { alert("บันทึกสำเร็จ"); closeForm(); showHistory(); }
+  toggleLoad(false);
 }
 
 function showForm() { document.getElementById("formBox").style.display = "block"; document.getElementById("historyBox").style.display = "none"; document.getElementById("contact_mobile").value = mobile; }
 function closeForm() { document.getElementById("formBox").style.display = "none"; }
 function closeHistory() { document.getElementById("historyBox").style.display = "none"; }
-
-async function cancelBooking(id) { 
-  if(confirm("ยืนยันยกเลิกรายการนี้?")){ 
-    toggleLoading(true); 
-    const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"cancel_booking", booking_id:id, line_user_id:userId}) }).then(r=>r.json()); 
-    toggleLoading(false);
-    if(res.success) showHistory(); 
-  } 
-}
-
-async function editDriverMobile() { 
-  const phone = prompt("แก้ไขเบอร์โทรใหม่:", mobile); 
-  if(phone){ 
-    toggleLoading(true); 
-    const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"edit_driver_mobile", line_user_id:userId, mobile_phone:phone}) }).then(r=>r.json()); 
-    toggleLoading(false);
-    if(res.success) { alert("บันทึกเบอร์โทรใหม่แล้ว"); mobile = phone; } 
-  } 
-}
+async function cancelBooking(id) { if(confirm("ยกเลิกงานนี้?")){ toggleLoad(true); const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"cancel_booking", booking_id:id, line_user_id:userId}) }).then(r=>r.json()); if(res.success) showHistory(); toggleLoad(false); } }
+async function editDriverMobile() { const phone = prompt("เบersใหม่:", mobile); if(phone){ toggleLoad(true); const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"edit_driver_mobile", line_user_id:userId, mobile_phone:phone}) }).then(r=>r.json()); if(res.success) mobile = phone; toggleLoad(false); } }
 
 init();
 </script>
