--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <style>
-  body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f4f7f6; color:#333; margin:0; }
-  .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); border:1px solid #eee; }
-  h2 { font-size:22px; color:#0a7cff; margin-bottom:12px; }
+  body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f0f2f5; color:#333; margin:0; }
+  .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border:1px solid #eee; position: relative; }
+  .card.past-job { opacity: 0.6; background: #f8f9fa; filter: grayscale(0.5); }
+  h2 { font-size:22px; color:#0a7cff; margin-bottom:5px; }
   #username { font-weight:bold; font-size:18px; }
-  #roleBadge { display:inline-block; padding:4px 12px; border-radius:20px; background:#e2e8f0; font-size:13px; margin-bottom:15px; font-weight:600; }
-  button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; transition: 0.2s; }
+  #roleBadge { display:inline-block; padding:3px 10px; border-radius:15px; background:#e4e6eb; font-size:12px; margin-bottom:15px; font-weight:600; }
+  
+  button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; }
   .primary { background:#0a7cff; color:#fff; }
-  .secondary { background:#f1f3f5; color:#495057; }
-  .danger { background:#fff5f5; color:#e03131; border:1px solid #ffa8a8; }
-  .success { background:#2f9e44; color:#fff; }
+  .secondary { background:#e4e6eb; color:#4b4f56; }
+  .danger { background:#fff1f0; color:#ff4d4f; border:1px solid #ffccc7; }
+  .success { background:#28a745; color:#fff; }
+  
   input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px; margin-bottom:10px; border-radius:8px; border:1px solid #ddd; }
-  #formBox, #historyBox { display:none; }
-  .label-text { font-size:11px; color:#868e96; margin-top:8px; font-weight:bold; }
-  .val-text { font-size:15px; margin-bottom:8px; }
-  #loading { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.85); z-index:9999; justify-content:center; align-items:center; flex-direction:column; }
+  #formBox { display:none; }
+  .label-text { font-size:11px; color:#8c939d; text-transform:uppercase; margin-top:8px; font-weight: bold; }
+  .val-text { font-size:15px; margin-bottom:4px; }
+
+  #loading { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.8); z-index:9999; justify-content:center; align-items:center; flex-direction:column; }
   .spinner { border: 4px solid #f3f3f3; border-top: 4px solid #0a7cff; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; }
   @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 </style>
@@ -28,20 +32,20 @@
 
 <div id="loading">
   <div class="spinner"></div>
-  <p style="margin-top:10px; font-weight:bold; color:#0a7cff;">กำลังประมวลผล...</p>
+  <p style="margin-top:10px; font-weight:bold; color:#0a7cff;">กำลังโหลด...</p>
 </div>
 
 <div style="max-width: 500px; margin: auto;">
   <h2>ระบบจองรถ หก-มน.</h2>
-  <div id="username">สวัสดีคุณ...</div>
+  <div id="username">สวัสดี...</div>
   <div id="roleBadge">...</div>
 
-  <button id="mainBtn" class="primary"></button>
-  <div id="historyBox" style="display:block;"></div> <button id="subBtn" class="secondary" style="margin-top:20px;">จองรถใหม่ / ลงงานด่วน</button>
-  <div id="driverActionBox"></div>
+  <div id="actionArea">
+    <button id="bookBtn" class="primary">...</button>
+  </div>
 
   <div id="formBox" class="card">
-    <h3 style="margin-top:0;">ระบุข้อมูลการจอง</h3>
+    <h3 id="formTitle" style="margin-top:0;">กรอกข้อมูล</h3>
     <input type="date" id="booking_date">
     <input type="time" id="booking_time">
     <select id="vehicle_type">
@@ -54,13 +58,17 @@
     <input type="text" id="pickup_location" placeholder="จุดรับ">
     <input type="text" id="dropoff_location" placeholder="จุดส่ง">
     <input type="text" id="contact_mobile" placeholder="เบอร์โทรติดต่อ">
-    <button class="primary" onclick="submitBooking()">ยืนยัน</button>
+    <button class="primary" onclick="submitBooking()">ยืนยันบันทึก</button>
     <button class="secondary" onclick="closeForm()">ยกเลิก</button>
   </div>
+
+  <div id="historyBox"></div>
+  
+  <div id="roleToggleArea" style="margin-top:20px;"></div>
 </div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycby0XCqP5QSUl76fCuXo43N1sHuQDY3LfVgV8AgBktlx1tM8fnJhxIXEaoi0XIoNkCQp8g/exec"; 
+const ENDPOINT = "https://script.google.com/macros/s/AKfycby2YjFfBIwFgiAqEIO857zb6ISkz1ZjecUseimsQgRrtOv7RdJg7XnM-mske4QdKJOznA/exec"; // *** เปลี่ยน URL ทุกครั้งที่ Deploy ใหม่ ***
 let userId = "", role = "", mobile = "", displayName = "";
 
 function toggleLoad(s) { document.getElementById("loading").style.display = s ? "flex" : "none"; }
@@ -80,26 +88,27 @@ async function init() {
     }).then(r => r.json());
 
     role = res.role; mobile = res.mobile || "";
-    render();
-    showHistory(); // ดึงข้อมูลประวัติทันทีทุก Role
+    renderUI();
+    showHistory();
   } catch (err) { alert(err); }
   toggleLoad(false);
 }
 
-function render() {
-  const mainBtn = document.getElementById("mainBtn");
-  const subBtn = document.getElementById("subBtn");
-  document.getElementById("roleBadge").innerText = (role === "driver") ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
+function renderUI() {
+  const bookBtn = document.getElementById("bookBtn");
+  const roleBadge = document.getElementById("roleBadge");
+  const roleToggleArea = document.getElementById("roleToggleArea");
   
-  mainBtn.innerText = "รีเฟรชข้อมูล";
-  mainBtn.onclick = showHistory;
-  
-  subBtn.onclick = showForm;
-
-  const dBox = document.getElementById("driverActionBox");
-  dBox.innerHTML = (role === "driver") 
-    ? `<button class="danger" onclick="cancelDriverRole()" style="margin-top:20px;">ยกเลิกบทบาทคนขับ</button>`
-    : `<button class="secondary" onclick="registerDriver()" style="margin-top:20px;">สมัครเป็นคนขับรถ</button>`;
+  if (role === "driver") {
+    roleBadge.innerText = "🔓 พนักงานขับรถ";
+    bookBtn.innerText = "กรอกข้อมูลงานรับเอง";
+    roleToggleArea.innerHTML = `<button class="danger" onclick="cancelDriverRole()">ยกเลิกบทบาทพนักงานขับรถ</button>`;
+  } else {
+    roleBadge.innerText = "👤 ผู้ใช้งานทั่วไป";
+    bookBtn.innerText = "จองรถพร้อมคนขับ";
+    roleToggleArea.innerHTML = `<button class="secondary" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
+  }
+  bookBtn.onclick = () => { document.getElementById("formBox").style.display = "block"; window.scrollTo(0,0); };
 }
 
 async function showHistory() {
@@ -110,42 +119,63 @@ async function showHistory() {
     body: JSON.stringify({ action: "get_all_bookings", line_user_id: userId })
   }).then(r => r.json());
 
+  const now = new Date();
   let list = res.data || [];
-  let filtered = list.filter(b => {
-    const isMine = (b.booked_by === userId || b.driver_line_id === userId);
-    return (role === "driver") ? (isMine || b.status === "pending") : isMine;
-  });
+  let filtered = list.filter(b => (role === "driver") ? (b.booked_by === userId || b.driver_line_id === userId || b.status === "pending") : (b.booked_by === userId));
 
-  hBox.innerHTML = "<h3 style='margin-bottom:10px;'>สถานะงานปัจจุบัน</h3>";
+  hBox.innerHTML = "<h3 style='margin: 15px 0 10px 0;'>ประวัติการจองและงานว่าง</h3>";
+  
   if (filtered.length === 0) {
-    hBox.innerHTML += "<p style='text-align:center; color:#999;'>ไม่มีรายการงาน</p>";
+    hBox.innerHTML += "<p style='text-align:center; color:#999;'>ไม่มีรายการ</p>";
   } else {
-    hBox.innerHTML += filtered.reverse().map(b => `
-      <div class="card" style="border-left: 5px solid ${b.status === 'pending' ? '#f39c12' : '#2f9e44'}">
-        <div class="val-text"><b>${b.pickup_location} ➡️ ${b.dropoff_location}</b></div>
-        <div class="val-text" style="font-size:13px;">📅 ${b.booking_date.split('T')[0]} | ⏰ ${b.booking_time} น.</div>
-        <div class="val-text" style="color:${b.status === 'pending' ? '#f39c12' : '#2f9e44'}">
-          <b>${b.status.toUpperCase()}</b> ${b.driver_name ? '('+b.driver_name+')' : ''}
+    hBox.innerHTML += filtered.reverse().map(b => {
+      const bDate = new Date(b.booking_date);
+      const isPast = bDate < now.setHours(0,0,0,0);
+      const isCancelled = b.status === "cancelled";
+      const grayStyle = (isPast || isCancelled) ? "past-job" : "";
+      
+      return `
+        <div class="card ${grayStyle}">
+          <div class="label-text">เส้นทาง:</div>
+          <div class="val-text"><b>${b.pickup_location} ➡️ ${b.dropoff_location}</b></div>
+          <div class="label-text">วันที่:</div>
+          <div class="val-text">${b.booking_date.split('T')[0]} | ${b.booking_time} น.</div>
+          <div class="label-text">สถานะ:</div>
+          <div class="val-text" style="color:${b.status === 'pending' ? '#f39c12' : '#28a745'}">
+            <b>${b.status.toUpperCase()}</b> ${b.driver_name ? '('+b.driver_name+')' : ''}
+          </div>
+          ${(role === "driver" && b.status === "pending") ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
         </div>
-        ${(role === "driver" && b.status === "pending") ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
-        ${((b.booked_by === userId || b.driver_line_id === userId) && b.status !== 'cancelled') ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')" style="padding:8px; font-size:12px;">ยกเลิก</button>` : ""}
-      </div>
-    `).join("");
+      `;
+    }).join("");
   }
   toggleLoad(false);
 }
 
-// ฟังก์ชันอื่นๆ (acceptJob, submitBooking, etc.) ให้ใช้ Logic เดิมจากโค้ดก่อนหน้า
+async function registerDriver() {
+  const phone = prompt("กรุณากรอกเบอร์โทรติดต่อ:");
+  if (!phone) return;
+  toggleLoad(true);
+  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "register_driver", line_user_id: userId, mobile_phone: phone }) }).then(r => r.json());
+  if (res.success) { alert("สมัครเป็นคนขับสำเร็จ"); location.reload(); } else { alert("เกิดข้อผิดพลาด"); }
+  toggleLoad(false);
+}
+
+async function cancelDriverRole() {
+  if (!confirm("ยืนยันยกเลิกบทบาท?")) return;
+  toggleLoad(true);
+  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_driver", line_user_id: userId }) }).then(r => r.json());
+  if (res.success) location.reload();
+  toggleLoad(false);
+}
+
 async function acceptJob(id) {
   if (!confirm("ยืนยันรับงาน?")) return;
   toggleLoad(true);
   const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName }) }).then(r => r.json());
-  if (res.success) showHistory(); else alert(res.message);
+  if (res.success) showHistory();
   toggleLoad(false);
 }
-
-function showForm() { document.getElementById("formBox").style.display = "block"; window.scrollTo(0,0); }
-function closeForm() { document.getElementById("formBox").style.display = "none"; }
 
 async function submitBooking() {
   toggleLoad(true);
@@ -163,9 +193,11 @@ async function submitBooking() {
       contact_mobile: document.getElementById("contact_mobile").value
     })
   }).then(r => r.json());
-  if (res.success) { closeForm(); showHistory(); }
+  if (res.success) { document.getElementById("formBox").style.display = "none"; showHistory(); }
   toggleLoad(false);
 }
+
+function closeForm() { document.getElementById("formBox").style.display = "none"; }
 
 init();
 </script>
