--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <style>
   body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f0f2f5; color:#333; margin:0; }
-  .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border:1px solid #eee; position: relative; }
-  .card.past-job { opacity: 0.6; background: #f8f9fa; filter: grayscale(0.5); }
+  .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border:1px solid #eee; }
+  .card.past-job { opacity: 0.65; background: #f8f9fa; border: 1px dashed #ccc; }
   h2 { font-size:22px; color:#0a7cff; margin-bottom:5px; }
   #username { font-weight:bold; font-size:18px; }
   #roleBadge { display:inline-block; padding:3px 10px; border-radius:15px; background:#e4e6eb; font-size:12px; margin-bottom:15px; font-weight:600; }
@@ -15,13 +15,13 @@
   button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; }
   .primary { background:#0a7cff; color:#fff; }
   .secondary { background:#e4e6eb; color:#4b4f56; }
-  .danger { background:#fff1f0; color:#ff4d4f; border:1px solid #ffccc7; }
-  .success { background:#28a745; color:#fff; }
+  .success { background:#28a745; color:#fff; margin-top:10px; }
   
   input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px; margin-bottom:10px; border-radius:8px; border:1px solid #ddd; }
   #formBox { display:none; }
   .label-text { font-size:11px; color:#8c939d; text-transform:uppercase; margin-top:8px; font-weight: bold; }
-  .val-text { font-size:15px; margin-bottom:4px; }
+  .val-text { font-size:15px; margin-bottom:4px; line-height: 1.4; }
+  .status-badge { font-weight: bold; padding: 2px 8px; border-radius: 5px; font-size: 13px; }
 
   #loading { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.8); z-index:9999; justify-content:center; align-items:center; flex-direction:column; }
   .spinner { border: 4px solid #f3f3f3; border-top: 4px solid #0a7cff; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; }
@@ -45,11 +45,11 @@
   </div>
 
   <div id="formBox" class="card">
-    <h3 id="formTitle" style="margin-top:0;">กรอกข้อมูล</h3>
+    <h3 style="margin-top:0;">กรอกรายละเอียด</h3>
     <input type="date" id="booking_date">
     <input type="time" id="booking_time">
     <select id="vehicle_type">
-      <option value="ไม่ระบุ">ไม่ระบุ</option>
+      <option value="ไม่ระบุ">ไม่ระบุประเภทรถ</option>
       <option value="รถเก๋ง">รถเก๋ง</option>
       <option value="รถกระบะ">รถกระบะ</option>
       <option value="รถตู้">รถตู้</option>
@@ -58,20 +58,37 @@
     <input type="text" id="pickup_location" placeholder="จุดรับ">
     <input type="text" id="dropoff_location" placeholder="จุดส่ง">
     <input type="text" id="contact_mobile" placeholder="เบอร์โทรติดต่อ">
-    <button class="primary" onclick="submitBooking()">ยืนยันบันทึก</button>
+    <button class="primary" onclick="submitBooking()">ยืนยัน</button>
     <button class="secondary" onclick="closeForm()">ยกเลิก</button>
   </div>
 
   <div id="historyBox"></div>
-  
   <div id="roleToggleArea" style="margin-top:20px;"></div>
 </div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycby2YjFfBIwFgiAqEIO857zb6ISkz1ZjecUseimsQgRrtOv7RdJg7XnM-mske4QdKJOznA/exec"; // *** เปลี่ยน URL ทุกครั้งที่ Deploy ใหม่ ***
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbyUArXuakK9CoS5N7Mwn5zdXD-5Jif5phVGV_2o2By9ZHVYmwg7o394_Z5TFJlDQV0W0w/exec"; 
 let userId = "", role = "", mobile = "", displayName = "";
 
 function toggleLoad(s) { document.getElementById("loading").style.display = s ? "flex" : "none"; }
+
+// ฟังก์ชันแปลงวันที่ให้อ่านง่าย
+function formatThaiDate(dateStr) {
+  if (!dateStr || dateStr === "null") return "-";
+  const d = new Date(dateStr);
+  const months = ["ม.ค.", "ก.พ.", "มี.ค.", "เม.ย.", "พ.ค.", "มิ.ย.", "ก.ค.", "ส.ค.", "ก.ย.", "ต.ค.", "พ.ย.", "ธ.ค."];
+  return `${d.getDate()} ${months[d.getMonth()]} ${d.getFullYear() + 543}`;
+}
+
+function formatThaiTime(timeStr) {
+  if (!timeStr || timeStr === "null") return "-";
+  // ถ้าเป็น Date object จากการดึง Sheet
+  if (timeStr.includes("T") || timeStr.length > 8) {
+     const t = new Date(timeStr);
+     return t.getHours().toString().padStart(2, '0') + ":" + t.getMinutes().toString().padStart(2, '0') + " น.";
+  }
+  return timeStr.substring(0, 5) + " น.";
+}
 
 async function init() {
   toggleLoad(true);
@@ -82,11 +99,7 @@ async function init() {
     userId = p.userId; displayName = p.displayName;
     document.getElementById("username").innerText = displayName;
 
-    const res = await fetch(ENDPOINT, {
-      method: "POST",
-      body: JSON.stringify({ action: "auto_register", line_user_id: userId, display_name: displayName })
-    }).then(r => r.json());
-
+    const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "auto_register", line_user_id: userId, display_name: displayName }) }).then(r => r.json());
     role = res.role; mobile = res.mobile || "";
     renderUI();
     showHistory();
@@ -96,53 +109,42 @@ async function init() {
 
 function renderUI() {
   const bookBtn = document.getElementById("bookBtn");
-  const roleBadge = document.getElementById("roleBadge");
   const roleToggleArea = document.getElementById("roleToggleArea");
-  
-  if (role === "driver") {
-    roleBadge.innerText = "🔓 พนักงานขับรถ";
-    bookBtn.innerText = "กรอกข้อมูลงานรับเอง";
-    roleToggleArea.innerHTML = `<button class="danger" onclick="cancelDriverRole()">ยกเลิกบทบาทพนักงานขับรถ</button>`;
-  } else {
-    roleBadge.innerText = "👤 ผู้ใช้งานทั่วไป";
-    bookBtn.innerText = "จองรถพร้อมคนขับ";
-    roleToggleArea.innerHTML = `<button class="secondary" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
-  }
+  document.getElementById("roleBadge").innerText = (role === "driver") ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
+  bookBtn.innerText = (role === "driver") ? "กรอกข้อมูลงานรับเอง" : "จองรถพร้อมคนขับ";
   bookBtn.onclick = () => { document.getElementById("formBox").style.display = "block"; window.scrollTo(0,0); };
+  roleToggleArea.innerHTML = (role === "driver") 
+    ? `<button class="secondary" style="font-size:12px;" onclick="cancelDriverRole()">ยกเลิกบทบาทพนักงานขับรถ</button>`
+    : `<button class="secondary" style="font-size:12px;" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
 }
 
 async function showHistory() {
   toggleLoad(true);
   const hBox = document.getElementById("historyBox");
-  const res = await fetch(ENDPOINT, {
-    method: "POST",
-    body: JSON.stringify({ action: "get_all_bookings", line_user_id: userId })
-  }).then(r => r.json());
+  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "get_all_bookings", line_user_id: userId }) }).then(r => r.json());
+  
+  const now = new Date().setHours(0,0,0,0);
+  let filtered = (res.data || []).filter(b => (role === "driver") ? (b.booked_by === userId || b.driver_line_id === userId || b.status === "pending") : (b.booked_by === userId));
 
-  const now = new Date();
-  let list = res.data || [];
-  let filtered = list.filter(b => (role === "driver") ? (b.booked_by === userId || b.driver_line_id === userId || b.status === "pending") : (b.booked_by === userId));
-
-  hBox.innerHTML = "<h3 style='margin: 15px 0 10px 0;'>ประวัติการจองและงานว่าง</h3>";
+  hBox.innerHTML = "<h3 style='margin: 15px 0 10px 0;'>รายการงาน</h3>";
   
   if (filtered.length === 0) {
-    hBox.innerHTML += "<p style='text-align:center; color:#999;'>ไม่มีรายการ</p>";
+    hBox.innerHTML += "<p style='text-align:center; color:#999;'>ไม่มีรายการในขณะนี้</p>";
   } else {
     hBox.innerHTML += filtered.reverse().map(b => {
-      const bDate = new Date(b.booking_date);
-      const isPast = bDate < now.setHours(0,0,0,0);
+      const bDate = new Date(b.booking_date).setHours(0,0,0,0);
+      const isPast = bDate < now;
       const isCancelled = b.status === "cancelled";
-      const grayStyle = (isPast || isCancelled) ? "past-job" : "";
       
       return `
-        <div class="card ${grayStyle}">
-          <div class="label-text">เส้นทาง:</div>
+        <div class="card ${ (isPast || isCancelled) ? 'past-job' : '' }">
           <div class="val-text"><b>${b.pickup_location} ➡️ ${b.dropoff_location}</b></div>
-          <div class="label-text">วันที่:</div>
-          <div class="val-text">${b.booking_date.split('T')[0]} | ${b.booking_time} น.</div>
-          <div class="label-text">สถานะ:</div>
-          <div class="val-text" style="color:${b.status === 'pending' ? '#f39c12' : '#28a745'}">
-            <b>${b.status.toUpperCase()}</b> ${b.driver_name ? '('+b.driver_name+')' : ''}
+          <div class="val-text">📅 ${formatThaiDate(b.booking_date)} | ⏰ ${formatThaiTime(b.booking_time)}</div>
+          <div class="val-text">👤 ผู้จอง: ${b.user_display_name} | 🚗 ${b.vehicle_type}</div>
+          <div class="val-text">
+            สถานะ: <span class="status-badge" style="color:${b.status === 'pending' ? '#f39c12' : '#28a745'}">
+              ${b.status.toUpperCase()} ${b.driver_name ? '('+b.driver_name+')' : ''}
+            </span>
           </div>
           ${(role === "driver" && b.status === "pending") ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
         </div>
@@ -152,32 +154,10 @@ async function showHistory() {
   toggleLoad(false);
 }
 
-async function registerDriver() {
-  const phone = prompt("กรุณากรอกเบอร์โทรติดต่อ:");
-  if (!phone) return;
-  toggleLoad(true);
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "register_driver", line_user_id: userId, mobile_phone: phone }) }).then(r => r.json());
-  if (res.success) { alert("สมัครเป็นคนขับสำเร็จ"); location.reload(); } else { alert("เกิดข้อผิดพลาด"); }
-  toggleLoad(false);
-}
-
-async function cancelDriverRole() {
-  if (!confirm("ยืนยันยกเลิกบทบาท?")) return;
-  toggleLoad(true);
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_driver", line_user_id: userId }) }).then(r => r.json());
-  if (res.success) location.reload();
-  toggleLoad(false);
-}
-
-async function acceptJob(id) {
-  if (!confirm("ยืนยันรับงาน?")) return;
-  toggleLoad(true);
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName }) }).then(r => r.json());
-  if (res.success) showHistory();
-  toggleLoad(false);
-}
-
 async function submitBooking() {
+  const fields = ["booking_date", "booking_time", "pickup_location", "dropoff_location"];
+  for (let f of fields) if (!document.getElementById(f).value) return alert("กรุณากรอกข้อมูลสำคัญให้ครบ");
+  
   toggleLoad(true);
   const res = await fetch(ENDPOINT, {
     method: "POST",
@@ -197,6 +177,16 @@ async function submitBooking() {
   toggleLoad(false);
 }
 
+async function registerDriver() {
+  const phone = prompt("กรุณากรอกเบอร์โทรศัพท์ของคุณ:");
+  if (!phone) return;
+  toggleLoad(true);
+  await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "register_driver", line_user_id: userId, mobile_phone: phone }) });
+  location.reload();
+}
+
+async function cancelDriverRole() { if (confirm("ยกเลิกบทบาท?")) { toggleLoad(true); await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_driver", line_user_id: userId }) }); location.reload(); } }
+async function acceptJob(id) { if (confirm("ยืนยันรับงาน?")) { toggleLoad(true); await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName }) }); showHistory(); } }
 function closeForm() { document.getElementById("formBox").style.display = "none"; }
 
 init();
