--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <input type="time" id="booking_time">
     <select id="vehicle_type">
       <option value="ไม่ระบุ">เลือกประเภทรถ</option>
+      <option value="ไม่ระบุ">ไม่ระบุ</option>
       <option value="รถเก๋ง">รถเก๋ง</option>
       <option value="รถกระบะ">รถกระบะ</option>
       <option value="รถตู้">รถตู้</option>
