--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <h2>ระบบจองรถ หก-มน.</h2>
   <div id="username">สวัสดี...</div>
   <div id="roleBadge">...</div>
+  <div id="driverMobileArea" style="font-size: 14px; color: #666; margin-top: -10px; margin-bottom: 15px; font-weight: bold;"></div>
 
   <div id="actionArea">
     <button id="bookBtn" class="primary">...</button>
@@ -105,6 +106,7 @@ async function init() {
 
     const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "auto_register", line_user_id: userId, display_name: displayName }) }).then(r => r.json());
     role = res.role;
+    mobile = res.mobile; // เก็บเบอร์โทรที่ได้มาจาก Server
     renderUI();
     await showHistory();
   } catch (err) { alert(err); }
@@ -114,7 +116,12 @@ async function init() {
 function renderUI() {
   const bookBtn = document.getElementById("bookBtn");
   const roleToggleArea = document.getElementById("roleToggleArea");
+  const mobileArea = document.getElementById("driverMobileArea");
+  
   document.getElementById("roleBadge").innerText = (role === "driver") ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
+  
+  // แสดงเบอร์โทรเฉพาะคนขับ
+  mobileArea.innerText = (role === "driver" && mobile) ? "📞 เบอร์โทร: " + mobile : "";
   
   bookBtn.innerText = (role === "driver") ? "➕ เพิ่มงานใหม่ (รับเอง)" : "📅 จองรถล่วงหน้า";
   bookBtn.onclick = () => { document.getElementById("formBox").style.display = "block"; window.scrollTo(0,0); };
